<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_light_secondary">

    <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            android:contentDescription="Logo"
            android:elevation="4dp"
            android:background="@drawable/shadow_background"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/contentScrollView"
            app:layout_constraintStart_toStartOf="@id/contentScrollView"
            app:layout_constraintEnd_toEndOf="@id/contentScrollView"
            app:layout_constraintBottom_toTopOf="@id/contentScrollView"
            app:layout_constraintVertical_bias="0.5"/>

    <ScrollView
            android:id="@+id/contentScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_frame_background"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.8"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingTop="80dp">

            <TextView
                    android:id="@+id/contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"/>

            <!-- Botón de Teléfono -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp">

                <ImageView
                        android:id="@+id/callIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="Call"
                        android:src="@drawable/baseline_call_24"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="62585"
                        android:paddingStart="16dp"
                        android:textSize="18sp"/>
            </LinearLayout>

            <View style="@style/Divider"/>

            <!-- Botón de Email -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp">

                <ImageView
                        android:id="@+id/emailIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="Email"
                        android:src="@drawable/baseline_alternate_email_24"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_email"
                        android:paddingStart="16dp"
                        android:textSize="18sp"/>
            </LinearLayout>

            <View style="@style/Divider"/>

            <!-- Botón de Mapa -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp">

                <ImageView
                        android:id="@+id/mapIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="Map"
                        android:src="@drawable/baseline_add_location_24"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_address"
                        android:paddingStart="16dp"
                        android:textSize="18sp"/>
            </LinearLayout>

            <View style="@style/Divider"/>

            <!-- Imagen del Mapa -->
            <ImageView
                    android:id="@+id/mapImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/maps"
                    android:contentDescription="Map Screenshot"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>